# tyoMLIR

./: CMakeLists.txt  tyo.cpp
include/tyo/: AST.h  CMakeLists.txt  Dialect.h  MLIRGen.h  Ops.td  Parser.h
mlir/: Dialect.cpp
parser/: AST.cpp
